# manager-center

./: readme.md
manaerger_center/: LICENSE.txt  README.md  pyproject.toml
manaerger_center/mysql/: Dockerfile
manaerger_center/src/manaerger_center/: __about__.py  __init__.py  dash_server.py  http_exception_403.py  http_exception_404.py  login_page.py
mysql/: docker-compose.yml
mysql/config/: my.cnf
